[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sui"
version = "0.0.1"
authors = [{ name = "Example Author", email = "jtamayoh@gmail.com" }]
description = "scrap Sistema Único de Información de Servicios Públicos Domiciliarios"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["typer"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


[project.scripts]
sui = "sui.cli:cli"
